--- a/config
+++ b/config
@@ -1,12 +1,7 @@
-# Default config for sway
-#
-# Copy this to ~/.config/sway/config and edit it to your liking.
-#
+# ~/.config/sway/config
 # Read `man 5 sway` for a complete reference.
 
 ### Variables
-#
-# Logo key. Use Mod1 for Alt.
 set $mod Mod1
 
 # Home row direction keys, like vim
@@ -19,24 +14,14 @@ set $right l
 set $term terminator
 
 # Your preferred application launcher
-# Note: it's recommended that you pass the final command to sway
-# set $menu dmenu_path | dmenu | xargs swaymsg exec --
 set $menu dmenu_path | wofi --show drun -i | xargs swaymsg exec --
 
 ### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 
 #
-# Example configuration:
+# Lenvo X1C7 with external LG monitor
 #
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-#output eDP-1 enable resolution 1920x1080 position 0,0
-#output "Goldstar Company Ltd 27GL850 909NTDVFR570" enable resolution 2560x1440 position 0,0
-#focus output eDP-1
 
 # Both Displays
 #output eDP-1 scale 1
@@ -44,7 +29,7 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #output DP-5 scale 1
 #output DP-5 pos 0 0 res 1920x1080
 
-# Just LG Home
+# Just LG Display
 output eDP-1 disable
 output DP-5 scale 1
 output DP-5 pos 0 0 res 1920x1080
